# autochecker

./: .gitignore  LICENSE  README.md  pyproject.toml
src/autochecker/: __init__.py
