[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autochecker"
version = "0.1.0"
description = "LLM-powered math grading CLI"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Svyatoslav Suglobov", email = "svyatoslav.souglobov@gmail.com" },
]
dependencies = [
    "openpyxl",
    "pymupdf",
    "rich",
]

[project.scripts]
autochecker = "autochecker:main"

[tool.setuptools.packages.find]
where = ["src"]
